changed links styling

--- a/TeaShop/index.html
+++ b/TeaShop/index.html
@@ -17,9 +17,9 @@
            <!-- Navbar Links -->
            <div class="links">
               <nav>
-            <span class="link"><a href="#ourMissionSection" id="mission" >Mission</a></span>
-            <span class="link"><a href="#teaOfTheMonthSection" id="featured" >Featured Tea</a></span>
-            <span class="link"><a href="#locationsSectionLink" id="locations" >Locations</a></span>
+            <span class="link"><a class="linksClass" href="#ourMissionSection" id="mission" >Mission</a></span>
+            <span class="link"><a class="linksClass" href="#teaOfTheMonthSection" id="featured" >Featured Tea</a></span>
+            <span class="link"><a class="linksClass" href="#locationsSectionLink" id="locations" >Locations</a></span>
              </nav>
             </div>
         </header>
