--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <footer>
                   <h1 id="connect">Let's connect!</h1>
                   <p id="email">bradpresley30@gmail.com</p>
-                  <p id="phone">+(27) 1 392 7625</p>
+                  <p id="phone">+(27)6 1 392 7625</p>
                   
 
                   <div class="social">
