Removed link underlines

--- a/TeaShop/index.html
+++ b/TeaShop/index.html
@@ -12,7 +12,9 @@
        <header class="navigation">
            <!-- Tea Cosy Image Logo -->
            <div class="headerImage">
-           <img id="teaLogo" src="img-tea-cozy-logo.webp">
+            <a href="index.html">
+           <img id="teaLogo" src="img-tea-cozy-logo.webp" href="index.html">
+            </a>
            </div>
            <!-- Navbar Links -->
            <div class="links">
