Added link to github account

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <!-- bootstrap CDN -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
       <title>Responsive Portfolio Page | HTML & CSS</title>
       <link rel="stylesheet" href="style.css">
       <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
@@ -38,10 +40,10 @@
            
             <footer>
                   <h1 id="connect">Let's connect!</h1>
-                  <p id="email">bradpresley30@gmail.com</p>
-                  <p id="phone">+(27)6 1 392 7625</p>
+                  <p id="email">Email Address: bradpresley30@gmail.com</p>
+                  <p id="phone">Phone Number: 061 392 7625</p>
+                  <a href="https://github.com/Bradpresleyk"><p id="githubAcc">Github Account</p> </a>
                   
-
                   <div class="social">
                         <p id="footerLogo">©Brad King 2022</p>
                   </div>
