Added My Bug Tracker App to my portfolio website

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                   <a href="intro-section-with-dropdown-navigation-main/intro-section-with-dropdown-navigation-main/index.html"><img class="anim" src="Projects/NewInteractive.png" alt=""></a>
                   <a href="advice-generator-app-main/advice-generator-app-main/index.html"><img class="anim" src="Projects/AdviceGen.png" alt=""></a>
                   <a href="testimonials-grid-section-main/testimonials-grid-section-main/index.html"><img class="anim" src="Projects/TestimonialsSite.png" alt="project img"></a>
+                  <a href="https://github.com/Bradpresleyk/MyBugTrackerApp.git"><img class="anim" src="Projects/bugtracker thumbnail image.png" alt=""></a>
             </div>
 
            
@@ -42,7 +43,7 @@
                   <h1 id="connect">Let's connect!</h1>
                   <p id="email">Email Address: bradpresley30@gmail.com</p>
                   <p id="phone">Phone Number: 061 392 7625</p>
-                  <a href="https://github.com/Bradpresleyk"><p id="githubAcc">Github Account</p> </a>
+                  <a href="https://github.com/Bradpresleyk"><p id="githubAcc">Github Account Link</p> </a>
                   
                   <div class="social">
                         <p id="footerLogo">©Brad King 2022</p>
