fixed the links on the intro section page

--- a/intro-section-with-dropdown-navigation-main/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/intro-section-with-dropdown-navigation-main/index.html
@@ -21,7 +21,7 @@
         <!-- Features Nav Item -->
         <a id="featuresNav" class="features navItem">Features<img class="arrows" src="images/icon-arrow-down.svg" alt=""></a>
        
-         <a class="company navItem">Company<img class="arrows" src="images/icon-arrow-down.svg" alt="">
+         <a class="company navItem"><span id="company">Company</span><img class="arrows" src="images/icon-arrow-down.svg" alt="">
            <!-- Company Dropdown Item List -->
            <ul class="companyDropDown">
               <li>History</li>
@@ -29,8 +29,8 @@
               <li>Blog</li>
            </ul>
           </a>
-          <a class="careers navItem">Careers</a>
-          <a class="about navItem">About</a>
+          <a class="careers navItem" id="careers">Careers</a>
+          <a class="about navItem" id="about">About</a>
           <!-- A Container for the login and register -->
           <div class="loginAndRegister">
           <a class="login navItem">Login</a>
