Fixed page displaying at the bottom after loading

--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
                   </div>
             </footer>
       </div>
-      <script type="text/javascript">
-            window.sr = ScrollReveal();
-            sr.reveal('.anim');
-      </script>
+      <script type="text/javascript"></script>
 
      <script src="app.js"></script>
 </body>
