--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   </div>
             </footer>
       </div>
-      <!-- <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script> -->
+      <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
      <script src="app.js"></script>
 </body>
 </html>
